--- a/skamo3/CNN_Face.ipynb
+++ b/skamo3/CNN_Face.ipynb
@@ -9,7 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np\n",
+    "import pathlib\n",
+    "\n",
+    "AUTOTUNE = tf.data.experimental.AUTOTUNE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,14 +37,6 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "from matplotlib import pyplot as plt\n",
-    "import numpy as np\n",
-    "import pathlib\n",
-    "\n",
-    "AUTOTUNE = tf.data.experimental.AUTOTUNE\n",
-    "\n",
     "print(\"tensorflow version check : \", tf.__version__)\n",
     "print(\"gpu check : \",tf.test.is_gpu_available())"
    ]
@@ -51,27 +58,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dir = pathlib.Path('C:/Users/USER.DESKTOP-QQ2NR7I/workspace/img_project/before_folder/image_train/Training')\n",
+    "private_test_dir = pathlib.Path('C:/Users/USER.DESKTOP-QQ2NR7I/workspace/img_project/before_folder/image_train/PrivateTest')\n",
+    "public_test_dir = pathlib.Path('C:/Users/USER.DESKTOP-QQ2NR7I/workspace/img_project/before_folder/image_train/PublicTest')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_dir = 'workspace/img_project/before_folder/image_train'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dir = pathlib.Path(data_dir+'/Training')\n",
-    "private_test_dir = pathlib.Path(data_dir+'/PrivateTest')\n",
-    "public_test_dir = pathlib.Path(data_dir+'/PublicTest')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -89,6 +87,23 @@
     "print(len(list(train_dir.glob('*/*.jpg'))))\n",
     "print(len(list(public_test_dir.glob('*/*.jpg'))))\n",
     "print(len(list(private_test_dir.glob('*/*.jpg'))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(train_dir.glob('*/*.jpg')))"
    ]
   },
   {
@@ -665,30 +680,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'num_parallel_calls' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-49-433715ee5c18>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mval_labeled_ds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mval_list_ds\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_parallel_calls\u001b[0m\u001b[1;33m==\u001b[0m\u001b[0mAUTOTUNE\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m64\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'num_parallel_calls' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "val_labeled_ds = val_list_ds.map(process_path,num_parallel_calls=AUTOTUNE).batch"
+    "val_labeled_ds = val_list_ds.map(process_path,num_parallel_calls=AUTOTUNE).batch(64)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(64, 96, 96, 1) (64,)\n"
+     ]
+    }
+   ],
    "source": [
     "for i in val_labeled_ds.take(1):\n",
     "  print(i[0].shape, i[1].shape)"
@@ -696,9 +707,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57/57 [==============================] - 2s 40ms/step - loss: 1.4219 - sparse_categorical_accuracy: 0.6439\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1.4219235265464114, 0.64391196]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.evaluate(val_labeled_ds)"
    ]
@@ -713,9 +742,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Tensorflow",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
